# aigroup

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  readme  sitemap.xml
.github/workflows/: ghp.yml
FACE/: CMakeLists.txt  REAME  build.sh  env_mach_specific.sh  load_env.sh  trace_checkpoint.py
FACE/cmake/: FindNETCDF.cmake
FACE/src/: CMakeLists.txt  config.f90  initial_conditions.f90  io.f90  main.f90  norm.f90
ace2-inference/: index.html
ace2-workflow/: index.html
assets/stylesheets/: extra.css
configs/: config-inference-amip.yaml  config-inference.yaml
docs/: ace2-inference.md  ace2-spatial-decomp.md  ace2-workflow.md  e3sm-branch-runs.md  index.md  python-envs.md  screamv1-example.md
e3sm-branch-runs/: index.html
pr-preview/pr-19/: 404.html  index.html  sitemap.xml
pr-preview/pr-19/ace2-inference/: index.html
pr-preview/pr-19/ace2-workflow/: index.html
pr-preview/pr-19/python-envs/: index.html
pr-preview/pr-19/screamv1-example/: index.html
pr-preview/pr-19/search/: search_index.json
pr-preview/pr-2/: index.html
pr-preview/pr-20/: 404.html
pr-preview/pr-20/screamv1-example/: index.html
pr-preview/pr-20/search/: search_index.json
pr-preview/pr-21/: 404.html  index.html
pr-preview/pr-21/ace2-workflow/: index.html
pr-preview/pr-21/screamv1-example/: index.html
pr-preview/pr-21/search/: search_index.json
pr-preview/pr-22/: 404.html  index.html
pr-preview/pr-22/ace2-inference/: index.html
pr-preview/pr-22/ace2-workflow/: index.html
pr-preview/pr-22/python-envs/: index.html
pr-preview/pr-22/screamv1-example/: index.html
pr-preview/pr-22/search/: search_index.json
pr-preview/pr-23/: index.html
pr-preview/pr-23/ace2-workflow/: index.html
pr-preview/pr-23/search/: search_index.json
pr-preview/pr-24/: 404.html  index.html  sitemap.xml
pr-preview/pr-24/ace2-inference/: index.html
pr-preview/pr-24/ace2-workflow/: index.html
pr-preview/pr-26/: index.html
pr-preview/pr-4/: 404.html  index.html
pr-preview/pr-5/: 404.html  index.html  sitemap.xml
pr-preview/pr-6/: 404.html  index.html  sitemap.xml
pr-preview/pr-7/: sitemap.xml
pr-preview/pr-8/: index.html
prototypes/fortran-cpp-python/: CMakeLists.txt
prototypes/fortran-cpp-python/src/cpp/: python_bridge.cpp  python_bridge.hpp
prototypes/fortran-cpp-python/src/fortran/: fortran_main.f90
prototypes/fortran-cpp-python/src/python/: python_main.py  python_torch.py
python-envs/: index.html
screamv1-example/: index.html
scripts/: README.md  config_process_e3sm_data_ai.yaml  config_process_e3sm_data_ai_month_3.yaml  e3sm_stats_config.yaml  get_stats.py  process_e3sm_data_ai.py  process_e3sm_data_ai_month.py  remapping_parallel_EAM.sh  remapping_parallel_EAM_v2.sh  scripts.md  to_zarr.py  trace_ace_end2end.py
scripts/.ipynb_checkpoints/: process_e3sm_data_ai_month-checkpoint.py
search/: search_index.json
(+19 files in other folders)
